[gd_scene load_steps=4 format=3 uid="uid://bqypjw63y20ro"]

[ext_resource type="Script" uid="uid://bupsskrjut8x4" path="res://password_pad.gd" id="1_yd846"]
[ext_resource type="Texture2D" uid="uid://vwmpi5st1if5" path="res://Graphics/CollisionTiles/obstacle.png" id="2_q7f18"]

[sub_resource type="CircleShape2D" id="CircleShape2D_shivr"]

[node name="PasswordPad" type="Node2D"]
script = ExtResource("1_yd846")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_q7f18")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_shivr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_top = 4.0
offset_right = 40.0
offset_bottom = 44.0
scale = Vector2(0.99666107, 0.8556933)

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "enter password"

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 3.0303032
offset_top = 36.0
offset_right = 53.030304
offset_bottom = 67.0
text = "enter"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 68.5625
offset_bottom = 31.0
scale = Vector2(2.4418604, 1)

[node name="Button2" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 60.606064
offset_top = 36.0
offset_right = 117.606064
offset_bottom = 67.0
text = "cancel"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button2" to="." method="_on_button_2_pressed"]
